--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.7'
 
 services:
   server:
@@ -12,8 +12,7 @@ services:
       CACHE_PORT: '6379'
     ports:
       - '3333:3333'
-    image: amore14rn/faraway/server:latest
-
+    image: faraway/server:latest
     restart: 'no'
     depends_on:
       - redis
@@ -25,12 +24,12 @@ services:
     environment:
       SERVER_HOST: "server"
       SERVER_PORT: '3333'
-    image: amore14rn/faraway/client:latest
+    image: faraway/client:latest
     restart: 'no'
     depends_on:
       - server
 
   redis:
-      image: redis:6.2.6-alpine
-      ports:
-        - '6379:6379'
+    image: redis:6.2.6-alpine
+    ports:
+      - '6379:6379'
